--- a/style.css
+++ b/style.css
@@ -1,2 +1,44 @@
 @import url(https://fonts.googleapis.com/css?family=Merriweather);
 @import url(https://fonts.googleapis.com/css?family=Oswald);
+
+html {
+  box-sizing: border-box;
+  overflow: auto;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body {
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar-track
+{
+	border: 1px solid black;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+}
+
+.home {
+    text-align: center;
+    color: black;
+    height: 700px;
+    width: 100%;
+    background-size: 100% 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
