--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,8 @@
+<div class="parallax">
+
+</div>
+
 <div class="home">
-  <img src="../photos/Utah performing arts/20161007_195340.jpg" />
 <h1>Spray-On Solutions Providing Fire Proofing, Intumescent Paint
 and Spray On Insulation services for the greater Utah, Idaho,
 Colorado and Wyoming areas.</h1>
