home mostly complete

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
   box-sizing: border-box;
   overflow: auto;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -14,7 +15,7 @@ body {
     overflow-x: hidden;
 }
 
-::-webkit-scrollbar-track
+/*::-webkit-scrollbar-track
 {
 	border: 1px solid black;
 	background-color: #F5F5F5;
@@ -29,57 +30,115 @@ body {
 ::-webkit-scrollbar-thumb
 {
 	background-color: #000000;
+}*/
+
+p {
+  width: 80%;
+  margin-left: 10%;
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
 }
+
 h1{
   font-weight: bold;
   text-align: center;
 }
 
 .home {
-    text-align: center;
-    color: black;
-    height: 200px;
-    width: 100%;
-    background-size: 100% 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  background-color: white;
+  text-align: center;
+  padding: 50px 80px;
+  text-align: justify;
+  height: 300px;
   }
-  .parallax {
-    /* The image used */
+
+.caption {
+  position: absolute;
+  left: 0;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  color: #000;
+}
+
+.caption span.border {
+  border-radius: 10px;
+  background-color: #111;
+  color: #fff;
+  padding: 18px;
+  font-size: 25px;
+  letter-spacing: 10px;
+  opacity: .8;
+}
+
+h3 {
+  text-transform: uppercase;
+  font:  "Lato", sans-serif;
+  color: #111;
+}
+
+h2 {
+  font-weight: bold;
+  text-align: center;
+
+}
+
+.homebox {
+    padding: .5vw;
+    font-size: 0;
+    display: -ms-flexbox;
+    -ms-flex-wrap: wrap;
+    -ms-flex-direction: column;
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
+    display: -webkit-box;
+    display: flex;
+
+  }
+  .homeflex {
+    -webkit-box-flex: auto;
+    -ms-flex: auto;
+    flex: auto;
+    width: 200px;
+    margin: .5vw;
+  }
+
+  .homeflex img {
+    width: 100%;
+    height: auto;
+  }
+
+  .homeflex p {
+    text-decoration: none;
+    color: #000;
+ }
+
+  @media screen and (max-width: 400px) {
+    .homeflex { margin: 0; }
+    .homebox { padding: 0; }
+  }
+
+.parallax {
     background-image: url("photos/Utah performing arts/fireproofing/20161007_195340.jpg");
-
-    /* Set a specific height */
     height: 400px;
-
-    /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 .parallax1 {
-  /* The image used */
   background-image: url("photos/Utah performing arts/Intumescent paint/2015-07-23 09.25.35.jpg");
-
-  /* Set a specific height */
   height: 300px;
-
-  /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .parallax2 {
-  /* The image used */
-  background-image: url("http://www.riseandshinegroup.com/home/uploads/spraycontec2.jpg");
-
-  /* Set a specific height */
+  background-image: url("photos/jvhospital/2015-06-03 11.19.17.jpg");
   height: 300px;
-
-  /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -87,9 +146,15 @@ h1{
 }
 
 .about {
-  margin-top: 50px;
+}
+
+.list-wrap{
+ width:450px;
+ margin:0 auto;
 }
 
 .fireproofing{
-  margin-top: 50px;
+  text-overflow: inherit;
+  text-align: center;
+  padding: 50px 80px;
 }
