--- a/views/home.html
+++ b/views/home.html
@@ -1,9 +1,53 @@
 <div class="parallax">
-
+  <div class="caption">
+      <span class="border">Spray-On Solutions</span>
+    </div>
 </div>
 
 <div class="home">
-<h1>Spray-On Solutions Providing Fire Proofing, Intumescent Paint
+<h3>Spray-On Solutions Provides Fire Proofing, Intumescent Paint
 and Spray On Insulation services for the greater Utah, Idaho,
-Colorado and Wyoming areas.</h1>
+Colorado and Wyoming areas.</h3>
+<p> With Spay-on Solutions, you will have highly experienced and certified fireproofing contractors on the job, from start to finish.
+  We know what an important role our fireproofing services play in the security of a building, and we take this responsibility very seriously. Our goal is to complete every project to the highest industry standards, on schedule and within budget.
+Time and again, people tell us they wish they would have chosen  Spray-on Solutions rather than just going with the lowest bid.</p>
+
+</div>
+<div class="parallax"></div>
+<h2>We offer expertise in Fire Proofing, Intumescent Paint, and Spray-on Acoustical Insulation.</h2>
+
+  <div class="homebox">
+    <div class="homeflex"><a ui-sref="fireproofing">
+      <figure><img src="photos/Utah performing arts/fireproofing/20161007_194346.jpg"/><p>Fire Proofing Services</p>
+      </figure>
+    </a>
+  </div>
+    <div class="homeflex"><a ui-sref="intumescent">
+      <figure><img src="photos/jvhospital/20141020_134908.jpg"/><p>Intumescent Paint</p>
+      </figure>
+    </a>
+  </div>
+    <div class="homeflex"><a ui-sref="insulation">
+      <figure><img src="photos/livingplanetaquarium/2014-03-17 17.45.37.jpg"/><p>Acoustical Insulation</p>
+      </figure>
+    </a>
+  </div>
+    <div class="homeflex"><a ui-sref="portfolio">
+      <figure><img src="photos/livingplanetaquarium/2014-03-17 18.43.30.jpg"/><p>Our Work</p>
+      </figure>
+    </a>
+  </div>
+    <div class="homeflex"><a ui-sref="contact">
+      <figure><img src="photos/Utah performing arts/fireproofing/20161007_194346.jpg"/><p>Contact Us</p>
+      </figure>
+    </a>
+  </div>
+  </div>
+<div class="parallax1">
+<div class="contact-home">
+  <p>Address: 668 E Main Street
+Grantsville, UT 84029-9689 Tel: (435) 884-6708 Email: mike@sprayonsolutions.net
+</p>
+
+</div>
 </div>
