--- a/views/about.html
+++ b/views/about.html
@@ -1,43 +1,45 @@
 <div class="about">
 <div class="parallax">
-  
+  <div class="caption">
+    <span class="border">About Spray-on Solutions</span>
+  </div>
 </div>
 
 
-<h1>We install fibrous and cementitious fireproofing, intumescent paint, and sprayed on acoustic insulation services</h1>
-<p>At Spray-on Solutions we offer fireproofing services to the people of Utah, Idaho, Wyoming, and Colorado.
-Since our founding, we have provided fireproofing services for a wide range of commercial and industrial facilities.
- Some of which have included:
-</p>
-<p>Hospitals</p>
-<p>Office buildings</p>
-<p>High rises</p>
-<p>Apartment and condominium complexes</p>
-<p>Theaters and museums</p>
-<p>Warehouses</p>
-<p>Educational and religious institutions</p>
+<h1>We install fibrous and cementitious fireproofing, intumescent paint, and sprayed on acoustic insulation </h1>
+<p> At Spray-on Solutions we offer fireproofing, intumescent paint, and sprayed on acoustic insulation services to the people of Utah, Idaho, Wyoming, and Colorado.
+  When it comes to products, we only use the best of the best. Some of which include: Blaze Shield II, Blaze Shield HP, Cafco 300, Cafco 400,
+  Fendolite MII, Isolatek, Monokote, Cafco board, Spray film, WB3, WB4, WB5, Monoglass, K13.</p>
+<p> Our fireproofing products meet all requirements established by national and local building codes and have proven to be highly effective.Since our founding, we have provided these services for a wide range of commercial and industrial facilities.
+ Some of which have included:</p>
+<div class="list-wrap">
+<ul class="list">
+  <li><a href="views/portfolio.html">Hospitals</a></li>
+  <li><a href="views/portfolio.html">Office buildings</a></li>
+  <li><a href="views/portfolio.html">High rises</a></li>
+  <li><a href="views/portfolio.html">Apartment and condominium complexes</a></li>
+  <li><a href="views/portfolio.html">Theaters and museums</a></li>
+  <li><a href="views/portfolio.html">Warehouses</a></li>
+  <li><a href="views/portfolio.html">Educational and religious institutions</a></li>
 
 
-
-<p >Here at Spray-on Solutions, we install fibrous and cementitious fireproofing, intumescent paint, and sprayed on acoustic insulation.
-When it comes to products, we only use the best of the best. Some of which include: Blaze Shield II, Blaze Shield HP, Cafco 300, Cafco 400,
-Fendolite MII, Isolatek, Monokote, Cafco board, Spray film, WB3, WB4, WB5, Monoglass, K13.
- Our fireproofing products meet all requirements established by national and local building codes and have proven to be highly effective.
-</p>
+</ul>
+</div>
 <div class="parallax1">
-
 </div>
 <h1>Committed to Excellence</h1>
-With Spay-on Solutions, you will have highly experienced and certified fireproofing contractors on the job, from start to finish. We know what an important role our fireproofing services play in the security of a building, and we take this responsibility very seriously. Our goal is to complete every project to the highest industry standards, on schedule and within budget.
-Time and again, people tell us they wish they would have went with Spray-on Solutions rather than just going with the lowest bid.
+<p>  With Spay-on Solutions, you will have highly experienced and certified fireproofing contractors on the job, from start to finish. We know what an important role our fireproofing services play in the security of a building, and we take this responsibility very seriously. Our goal is to complete every project to the highest industry standards, on schedule and within budget.
+Time and again, people tell us they wish they would have went with Spray-on Solutions rather than just going with the lowest bid.</p>
 <div class="parallax2">
 
 </div>
+<div>
 <h1>Learn more today</h1>
-If you are in or around Salt Lake City, UT and in need of our fireproofing services or have questions regarding our products or methods,
-please do not hesitate to get in contact with us. We are happy to address your concerns or answer any questions you may have.
-We are looking forward to hearing from you!
 
+<p>If you are in or around Salt Lake City, UT and in need of our fireproofing services or have questions regarding our products or methods,
+please do not hesitate to get in <a href="views/contact.html">contact</a> with us. We are happy to address your concerns or answer any questions you may have.
+We are looking forward to hearing from you!</p>
+</div>
 
 
 </div>
