--- a/views/about.html
+++ b/views/about.html
@@ -1,45 +1,72 @@
-<div class="about">
+
 <div class="parallax">
   <div class="caption">
     <span class="border">About Spray-on Solutions</span>
   </div>
 </div>
 
-
+<div class="text">
 <h1>We install fibrous and cementitious fireproofing, intumescent paint, and sprayed on acoustic insulation </h1>
-<p> At Spray-on Solutions we offer fireproofing, intumescent paint, and sprayed on acoustic insulation services to the people of Utah, Idaho, Wyoming, and Colorado.
-  When it comes to products, we only use the best of the best. Some of which include: Blaze Shield II, Blaze Shield HP, Cafco 300, Cafco 400,
-  Fendolite MII, Isolatek, Monokote, Cafco board, Spray film, WB3, WB4, WB5, Monoglass, K13.</p>
-<p> Our fireproofing products meet all requirements established by national and local building codes and have proven to be highly effective.Since our founding, we have provided these services for a wide range of commercial and industrial facilities.
+<p>Here at Spray-on Solutions, we install fibrous and cementitious fireproofing, intumescent paint, and sprayed on acoustical insulation. When it comes to products, we only use the best of the best. Some of which include: <a href="http://isolatek.com/productinfo/TDS/CAFCO%20BLAZESHIELD%20ll_C-TDS_09-16.pdf">Blaze Shield II,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20BLAZE-SHIELD%20HP_C-TDS_09-16.pdf"> Blaze Shield HP, </a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20300_C-TDS_09-16.pdf">Cafco 300,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20400_C-TDS_09-16.pdf"> Cafco 400, </a> <a href="http://isolatek.com/productinfo/TDS/CAFCO%20FENDOLITE%20M-ll%20C-TDS_09-16.pdf">Fendolite MII, </a>Isolatek, Monokote, <a href="http://isolatek.com/productinfo/TDS/CAFCO-BOARD_C-TDS_10-16.pdf">Cafco board,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20Spray%20Film%20WB%203_C-TDS_09-16.pdf"> Spray film WB3,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20Spray%20Film%20WB%204_C-TDS_09-16.pdf"> WB4,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20Spray%20Film%20WB%205_C-TDS_09-16.pdf"> WB5,</a> Monoglass, and K13. Our products meet all requirements established by national and local building codes and have proven to be highly effective. Since our founding, we have provided these services for a wide range of commercial and industrial facilities.
  Some of which have included:</p>
 <div class="list-wrap">
+<h4 class="links">
 <ul class="list">
-  <li><a href="views/portfolio.html">Hospitals</a></li>
-  <li><a href="views/portfolio.html">Office buildings</a></li>
-  <li><a href="views/portfolio.html">High rises</a></li>
-  <li><a href="views/portfolio.html">Apartment and condominium complexes</a></li>
-  <li><a href="views/portfolio.html">Theaters and museums</a></li>
-  <li><a href="views/portfolio.html">Warehouses</a></li>
-  <li><a href="views/portfolio.html">Educational and religious institutions</a></li>
+  <li><a ui-sref="portfolio">Hospitals</a></li>
+  <li><a ui-sref="portfolio">Office buildings</a></li>
+  <li><a ui-sref="portfolio">High rises</a></li>
+  <li><a ui-sref="portfolio">Apartment and condominium complexes</a></li>
+  <li><a ui-sref="portfolio">Theaters and museums</a></li>
+  <li><a ui-sref="portfolio">Warehouses</a></li>
+  <li><a ui-sref="portfolio">Educational and religious institutions</a></li>
 
 
 </ul>
+</h4>
+</div>
 </div>
 <div class="parallax1">
 </div>
+<div class="text">
 <h1>Committed to Excellence</h1>
 <p>  With Spay-on Solutions, you will have highly experienced and certified fireproofing contractors on the job, from start to finish. We know what an important role our fireproofing services play in the security of a building, and we take this responsibility very seriously. Our goal is to complete every project to the highest industry standards, on schedule and within budget.
-Time and again, people tell us they wish they would have went with Spray-on Solutions rather than just going with the lowest bid.</p>
+Time and again, people tell us they wish they would have chosen Spray-on Solutions rather than just going with the lowest bid.</p>
+<h4> Contact us at </h4><h3><a ui-sref="contact">(435) 884-6708</a></h3><h4> or by email @ <a href="mailto:mike@sprayonsolutions.net">MIKE@SPRAYONSOLUTIONS.NET</a> </h4>
+
+</div>
 <div class="parallax2">
 
 </div>
-<div>
-<h1>Learn more today</h1>
+<div class="text">
+<h1>Our Services</h1>
 
 <p>If you are in or around Salt Lake City, UT and in need of our fireproofing services or have questions regarding our products or methods,
-please do not hesitate to get in <a href="views/contact.html">contact</a> with us. We are happy to address your concerns or answer any questions you may have.
+please do not hesitate to get in <a ui-sref="contact">contact</a> with us. We are happy to address your concerns or answer any questions you may have.
 We are looking forward to hearing from you!</p>
+<h4> Contact us at </h4><h3><a ui-sref="contact">(435) 884-6708</a></h3><h4> or by email @ <a href="mailto:mike@sprayonsolutions.net">MIKE@SPRAYONSOLUTIONS.NET</a> </h4>
+<div class="flexbox">
+  <div class="flex"><a ui-sref="fireproofing">
+    <img src="photos/Utah performing arts/fireproofing/20161007_194346.jpg"/><p>Fire Proofing Services</p>
+  </a>
 </div>
-
+  <div class="flex"><a ui-sref="intumescent">
+    <img src="photos/jvhospital/20141020_134908.jpg"/><p>Intumescent Paint</p>
+  </a>
+</div>
+  <div class="flex"><a ui-sref="insulation">
+    <img src="photos/livingplanetaquarium/2014-03-17 17.45.37.jpg"/><p>Acoustical Insulation</p>
+  </a>
+</div>
+  <div class="flex"><a ui-sref="portfolio">
+    <img src="photos/livingplanetaquarium/2014-03-17 18.43.30.jpg"/><p>Our Work</p>
+  </a>
+</div>
+  <div class="flex"><a ui-sref="contact">
+    <img src="photos/jvhospital/2015-06-03 11.16.52.jpg"/><p>Contact Us</p>
+  </a>
+</div>
+</div>
+</div>
+<div class="parallax2">
 
 </div>
