--- a/views/fireproofing.html
+++ b/views/fireproofing.html
@@ -1,12 +1,55 @@
 
 <div class="parallax">
   <div class="caption">
-    <span class="border">Fireproofing Contractor in Salt Lake City Utah, Boise Idaho, Colorado and Wyoming </span>
+    <span class="border">Experienced Fireproofing Contractor</span>
   </div>
 </div>
-<div class="fireproofing">
-  <h4> Home and business fires are a reality. Every year, an estimated 15,400 buildings
-      are damaged by fire. While no one ever anticipates a fire occurring in their building,
-      it is always best to err on the side of caution. Proper implementation of a fireproofing system can protect the structure from fire,
-      allowing occupants to exit safely and saving millions in reconstruction costs.</h4>
+<div class="text">
+  <h2> Experienced and Certified Fireproofing Contractor serving the Salt Lake City Utah, Boise Idaho, Colorado and Wyoming </h2>
+
+<p>Here at Spray-on Solutions, we install fibrous and cementitious fireproofing, intumescent paint, and sprayed on acoustical insulation. When it comes to products, we only use the best of the best. Some of which include: <a href="http://isolatek.com/productinfo/TDS/CAFCO%20BLAZESHIELD%20ll_C-TDS_09-16.pdf">Blaze Shield II,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20BLAZE-SHIELD%20HP_C-TDS_09-16.pdf"> Blaze Shield HP, </a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20300_C-TDS_09-16.pdf">Cafco 300,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20400_C-TDS_09-16.pdf"> Cafco 400, </a> <a href="http://isolatek.com/productinfo/TDS/CAFCO%20FENDOLITE%20M-ll%20C-TDS_09-16.pdf">Fendolite MII, </a>Isolatek, Monokote, <a href="http://isolatek.com/productinfo/TDS/CAFCO-BOARD_C-TDS_10-16.pdf">Cafco board,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20Spray%20Film%20WB%203_C-TDS_09-16.pdf"> Spray film WB3,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20Spray%20Film%20WB%204_C-TDS_09-16.pdf"> WB4,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20Spray%20Film%20WB%205_C-TDS_09-16.pdf"> WB5,</a> Monoglass, and K13. Our products meet all requirements established by national and local building codes and have proven to be highly effective.</p>
+      <h4> Home and business fires are a reality. Every year, an estimated 15,400 buildings are damaged by fire. While no one ever anticipates a fire occurring in their building,
+          it is always best to err on the side of caution. Proper implementation of a fireproofing system can protect the structure from fire,
+          allowing occupants to exit safely and saving millions in reconstruction costs.</h4>
+
+</div>
+<div class="flexbox">
+  <div class="flex"><a ui-sref="fireproofing">
+    <figure><img src="photos/Utah performing arts/fireproofing/20161007_194346.jpg"/><p>Fire Proofing Services</p>
+    </figure>
+  </a>
+</div>
+  <div class="flex"><a ui-sref="intumescent">
+    <figure><img src="photos/jvhospital/20141020_134908.jpg"/><p>Intumescent Paint</p>
+    </figure>
+  </a>
+</div>
+  <div class="flex"><a ui-sref="insulation">
+    <figure><img src="photos/livingplanetaquarium/2014-03-17 17.45.37.jpg"/><p>Acoustical Insulation</p>
+    </figure>
+  </a>
+</div>
+  <div class="flex"><a ui-sref="portfolio">
+    <figure><img src="photos/livingplanetaquarium/2014-03-17 18.43.30.jpg"/><p>Our Work</p>
+    </figure>
+  </a>
+</div>
+  <div class="flex"><a ui-sref="contact">
+    <figure><img src="photos/jvhospital/2015-06-03 11.16.52.jpg"/><p>Contact Us</p>
+    </figure>
+  </a>
+</div>
+</div>
+<div class="text">
+
+<h2>Committed to Excellence</h2>
+
+<p>With Spay-on Solutions, you will have highly experienced and certified fireproofing contractors on the job, from start to finish. We know what an important role our fireproofing services play in the security of a building, and we take this responsibility very seriously. Our goal is to complete every project to the highest industry standards, on schedule and within budget.</p>
+
+<h3>Time and again, people tell us they wish they would have chosen Spray-on Solutions rather than just going with the lowest bid.</h3>
+
+<h4> Contact us at </h4><h3><a ui-sref="contact">(435) 884-6708</a></h3><h4> or by email @ <a href="mailto:mike@sprayonsolutions.net">MIKE@SPRAYONSOLUTIONS.NET</a> </h4>
+
+</div>
+<div class="parallax3">
 </div>
