--- a/views/home.html
+++ b/views/home.html
@@ -1,53 +1,58 @@
 <div class="parallax">
   <div class="caption">
       <span class="border">Spray-On Solutions</span>
-    </div>
+  </div>
 </div>
 
-<div class="home">
-<h3>Spray-On Solutions Provides Fire Proofing, Intumescent Paint
+<div class="text">
+<h2>Spray-On Solutions Provides Fire Proofing, Intumescent Paint
 and Spray On Insulation services for the greater Utah, Idaho,
-Colorado and Wyoming areas.</h3>
+Colorado and Wyoming areas.</h2>
+
+<h4> Contact us at </h4><h3><a ui-sref="contact">(435) 884-6708</a></h3><h4> or by email @ <a href="mailto:mike@sprayonsolutions.net">MIKE@SPRAYONSOLUTIONS.NET</a> </h4>
+
 <p> With Spay-on Solutions, you will have highly experienced and certified fireproofing contractors on the job, from start to finish.
   We know what an important role our fireproofing services play in the security of a building, and we take this responsibility very seriously. Our goal is to complete every project to the highest industry standards, on schedule and within budget.
 Time and again, people tell us they wish they would have chosen  Spray-on Solutions rather than just going with the lowest bid.</p>
 
 </div>
-<div class="parallax"></div>
+<div class="parallax2"></div>
 <h2>We offer expertise in Fire Proofing, Intumescent Paint, and Spray-on Acoustical Insulation.</h2>
 
-  <div class="homebox">
-    <div class="homeflex"><a ui-sref="fireproofing">
+  <div class="flexbox">
+    <div class="flex"><a ui-sref="fireproofing">
       <figure><img src="photos/Utah performing arts/fireproofing/20161007_194346.jpg"/><p>Fire Proofing Services</p>
       </figure>
     </a>
   </div>
-    <div class="homeflex"><a ui-sref="intumescent">
+    <div class="flex"><a ui-sref="intumescent">
       <figure><img src="photos/jvhospital/20141020_134908.jpg"/><p>Intumescent Paint</p>
       </figure>
     </a>
   </div>
-    <div class="homeflex"><a ui-sref="insulation">
+    <div class="flex"><a ui-sref="insulation">
       <figure><img src="photos/livingplanetaquarium/2014-03-17 17.45.37.jpg"/><p>Acoustical Insulation</p>
       </figure>
     </a>
   </div>
-    <div class="homeflex"><a ui-sref="portfolio">
+    <div class="flex"><a ui-sref="portfolio">
       <figure><img src="photos/livingplanetaquarium/2014-03-17 18.43.30.jpg"/><p>Our Work</p>
       </figure>
     </a>
   </div>
-    <div class="homeflex"><a ui-sref="contact">
-      <figure><img src="photos/Utah performing arts/fireproofing/20161007_194346.jpg"/><p>Contact Us</p>
+    <div class="flex"><a ui-sref="contact">
+      <figure><img src="photos/jvhospital/2015-06-03 11.16.52.jpg"/><p>Contact Us</p>
       </figure>
     </a>
   </div>
   </div>
 <div class="parallax1">
+</div>
 <div class="contact-home">
-  <p>Address: 668 E Main Street
-Grantsville, UT 84029-9689 Tel: (435) 884-6708 Email: mike@sprayonsolutions.net
-</p>
+  <h2>Contact Us</h2>
+  <h3>Tel: (435) 884-6708 Email:<a href="mailto:mike@sprayonsolutions.net"> mike@sprayonsolutions.net</a>
+</h3>
+<h4>Address: 668 E Main Street Grantsville, UT 84029-9689</h4>
 
 </div>
 </div>
