final complete project

--- a/views/about.html
+++ b/views/about.html
@@ -2,6 +2,8 @@
 <div class="parallax">
   <div class="caption">
     <span class="border">About Spray-on Solutions</span>
+    <p><span class="border1">(435)884-6708</span></p>
+    <p><span class="border2">Serving Utah, Idaho, Colorado and Wyoming</span></p>
   </div>
 </div>
 
@@ -40,10 +42,12 @@ Time and again, people tell us they wish they would have chosen Spray-on Solutio
 <div class="text">
 <h1>Our Services</h1>
 
-<p>If you are in or around Salt Lake City, UT and in need of our fireproofing services or have questions regarding our products or methods,
-please do not hesitate to get in <a ui-sref="contact">contact</a> with us. We are happy to address your concerns or answer any questions you may have.
+<p>If you are in Utah, Idho, Colorado, or Wyoming and in need of our fireproofing services or have questions regarding our products or methods,
+please do not hesitate to get in <a ui-sref="contact">contact</a> with us. We are happy to answer any questions you may have.
 We are looking forward to hearing from you!</p>
 <h4> Contact us at </h4><h3><a ui-sref="contact">(435) 884-6708</a></h3><h4> or by email @ <a href="mailto:mike@sprayonsolutions.net">MIKE@SPRAYONSOLUTIONS.NET</a> </h4>
+</div>
+
 <div class="flexbox">
   <div class="flex"><a ui-sref="fireproofing">
     <img src="photos/Utah performing arts/fireproofing/20161007_194346.jpg"/><p>Fire Proofing Services</p>
