--- a/views/contact.html
+++ b/views/contact.html
@@ -1,6 +1,23 @@
+<div class="parallax">
+<div class="caption">
+		<p><span class="border">Spray-On Solutions</span></p>
+		<p><span class="border1">(435)884-6708</span></p>
+		<p><span class="border2">Serving Utah, Idaho, Colorado and Wyoming</span></p>
+</div>
+</div> <!-- closing parallax div -->
+<div class="text">
+	<h1>Contact Us</h1>
+		<p>If you are in Utah, Idho, Colorado, or Wyoming and in need of our fireproofing services or have questions regarding our products or methods,
+		please do not hesitate to get in <a ui-sref="contact">contact</a> with us. We are happy to answer any questions you may have.
+		We are looking forward to hearing from you!</p>
+
+	<h4> Contact us at </h4><h3><a ui-sref="contact">(435) 884-6708</a></h3><h4> or by email @ <a href="mailto:mike@sprayonsolutions.net">MIKE@SPRAYONSOLUTIONS.NET</a> </h4>
+</div>
+
+<div class="parallax">
 
 
-<form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
+	<!-- <form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
 	<div class="row">
 		<label for="name">Your name:</label><br />
 		<input id="name" class="input" name="name" type="text" value="" size="30" /><br />
@@ -14,4 +31,5 @@
 		<textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
 	</div>
 	<input id="submit_button" type="submit" value="Send email" />
-</form>
+</form> -->
+</div>
