--- a/views/home.html
+++ b/views/home.html
@@ -1,13 +1,15 @@
 <div class="parallax">
   <div class="caption">
-      <span class="border">Spray-On Solutions</span>
+      <p><span class="border">Spray-On Solutions</span></p>
+      <p><span class="border1">(435)884-6708</span></p>
+      <p><span class="border2">Serving Utah, Idaho, Colorado and Wyoming</span></p>
   </div>
-</div>
+</div><!-- closing parallax div -->
 
 <div class="text">
-<h2>Spray-On Solutions Provides Fire Proofing, Intumescent Paint
+<h1>Spray-On Solutions Provides Fire Proofing, Intumescent Paint
 and Spray On Insulation services for the greater Utah, Idaho,
-Colorado and Wyoming areas.</h2>
+Colorado and Wyoming areas.</h1>
 
 <h4> Contact us at </h4><h3><a ui-sref="contact">(435) 884-6708</a></h3><h4> or by email @ <a href="mailto:mike@sprayonsolutions.net">MIKE@SPRAYONSOLUTIONS.NET</a> </h4>
 
@@ -16,7 +18,7 @@ Colorado and Wyoming areas.</h2>
 Time and again, people tell us they wish they would have chosen  Spray-on Solutions rather than just going with the lowest bid.</p>
 
 </div>
-<div class="parallax2"></div>
+<div class="parallax2"></div> <!-- closing parallax div -->
 <h2>We offer expertise in Fire Proofing, Intumescent Paint, and Spray-on Acoustical Insulation.</h2>
 
   <div class="flexbox">
@@ -47,12 +49,11 @@ Time and again, people tell us they wish they would have chosen  Spray-on Soluti
   </div>
   </div>
 <div class="parallax1">
-</div>
+</div><!-- closing parallax div -->
 <div class="contact-home">
   <h2>Contact Us</h2>
   <h3>Tel: (435) 884-6708 Email:<a href="mailto:mike@sprayonsolutions.net"> mike@sprayonsolutions.net</a>
 </h3>
 <h4>Address: 668 E Main Street Grantsville, UT 84029-9689</h4>
 
-</div>
 </div>
