--- a/views/intumescent.html
+++ b/views/intumescent.html
@@ -1,10 +1,14 @@
 
 <div class="parallax">
   <div class="caption">
-    <span class="border">Intumescent Paint Specialists</span>
+    <span class="border3">Intumescent Paint Specialists</span>
+    <p><span class="border">Spray-On Solutions</span></p>
+		<p><span class="border1">(435)884-6708</span></p>
+		<p><span class="border2">Serving Utah, Idaho, Colorado and Wyoming</span></p>
   </div>
   </div>
 <div class="text">
+  <h1>Intumescent Paint Specialists</h1>
   <p>Here at Spray-on Solutions, we install fibrous and cementitious fireproofing, intumescent paint, and sprayed on acoustic insulation. When it comes to products, we only use the best of the best. Some of which include: Blaze Shield II, Blaze Shield HP, Cafco 300, Cafco 400, Fendolite MII, Isolatek, Monokote, Cafco board, Spray film, WB3, WB4, WB5, Monoglass, K13. Our fireproofing products meet all requirements established by national and local building codes and have proven to be highly effective.</p>
 </div>
 <div class="flexbox">
