--- a/views/performingarts.html
+++ b/views/performingarts.html
@@ -2,21 +2,31 @@
 </div>
 <div class="flexbox">
 <div class="flex">
+  <a href="photos/Utah performing arts/fireproofing/20161007_194921.jpg">
+  <img src="photos/Utah performing arts/fireproofing/20161007_194921.jpg"/>
+</a>
+</div>
+<div class="flex"><a href="photos/Utah performing arts/Intumescent paint/2015-07-23 09.24.25.jpg">
+  <img src="photos/Utah performing arts/Intumescent paint/2015-07-23 09.24.25.jpg"/>
+</a>
+</div>
+<div class="flex"><a href="photos/Utah performing arts/Intumescent paint/2015-07-23 09.25.35.jpg">
+  <img src="photos/Utah performing arts/Intumescent paint/2015-07-23 09.25.35.jpg"/>
+</a>
+</div>
+<div class="flex"><a href="photos/Utah performing arts/Intumescent paint/20160113_141828.jpg">
+  <img src="photos/Utah performing arts/Intumescent paint/20160113_141828.jpg"/>
+</a>
+</div>
+<div class="flex"><a href="photos/Utah performing arts/Intumescent paint/20160113_141858.jpg">
+  <img src="photos/Utah performing arts/Intumescent paint/20160113_141858.jpg"/>
+</a>
+</div>
+<div class="flex"><a href="photos/Utah performing arts/fireproofing/20161007_194346.jpg">
   <img src="photos/Utah performing arts/fireproofing/20161007_194346.jpg"/>
-</div>
-<div class="flex"><a ui-sref="performingarts">
-  <img src=""/><h3>Utah Eccles Performing Arts Center</h3>
 </a>
 </div>
-<div class="flex"><a ui-sref="performingarts">
-  <img src="photos/Utah performing arts/fireproofing/20161007_195340.jpg"/><h3>Utah Eccles Performing Arts Center</h3>
-</a>
-</div>
-<div class="flex"><a ui-sref="performingarts">
-  <img src="photos/Utah performing arts/fireproofing/20161007_194346.jpg"/><h3>Utah Eccles Performing Arts Center</h3>
-</a>
-</div>
-<div class="flex"><a ui-sref="performingarts">
-  <img src="photos/Utah performing arts/fireproofing/20161007_194346.jpg"/><h3>Utah Eccles Performing Arts Center</h3>
+<div class="flex"><a href="photos/Utah performing arts/fireproofing/20161007_195340.jpg">
+  <img src="photos/Utah performing arts/fireproofing/20161007_195340.jpg"/>
 </a>
 </div>
