--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -1,8 +1,11 @@
 <div class="parallax">
   <div class="caption">
-    <span class="border">Our Featured Projects</span>
+    <p><span class="border">Spray-On Solutions</span></p>
+    <p><span class="border1">(435)884-6708</span></p>
+    <p><span class="border2">Serving Utah, Idaho, Colorado and Wyoming</span></p>
   </div>
 </div>
+<div class="portfoliopage">
 <h3>A Sampling Of Our Projects</h3>
 <div class="flexbox">
 
@@ -12,12 +15,12 @@
 </div>
 
   <div class="flex"><a ui-sref="livingplanet">
-    <img src="photos/livingplanetaquarium/2014-03-17 17.47.30.jpg"/><p>Living Planet Aquarium</p>
+    <img src="photos/livingplanetaquarium/2014-03-17 17.47.30.jpg"/><h3>Living Planet Aquarium</h3>
   </a>
 </div>
 
   <div class="flex"><a ui-sref="jvhospital">
-    <img src="photos/jvhospital/2015-06-03 11.19.17.jpg"/><p>Jordan Valley Medical Center</p>
+    <img src="photos/jvhospital/2015-06-03 11.19.17.jpg"/><h3>Jordan Valley Medical Center</h3>
   </a>
 </div>
 
@@ -27,7 +30,7 @@
 </div> -->
 
   <div class="flex"><a ui-sref="elizabeth">
-    <img src="photos/elizabethacademymonoglassphotos/2013-07-12 11.14.34.jpg"/><p>Elizabeth Academy</p>
+    <img src="photos/elizabethacademymonoglassphotos/2013-07-12 11.14.34.jpg"/><h3>Elizabeth Academy</h3>
   </a>
 </div>
 
@@ -54,6 +57,7 @@
   <div class="flex"><a ui-sref="contact">
     <img src="photos/jvhospital/2015-06-03 11.16.52.jpg"/><p>Contact Us</p>
   </a>
+</div>
 </div>
 </div>
 <div class="text">
