--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 .text {
   background-color: white;
   text-align: center;
+  font:  "Lato", sans-serif;
   padding: 50px 80px;
   text-align: justify;
   }
@@ -119,20 +120,55 @@ h2 {
 .caption {
   position: absolute;
   left: 0;
-  top: 25%;
+  top: 15%;
   width: 100%;
   text-align: center;
   color: #000;
 }
 
 .caption span.border {
-  border-radius: 10px;
-  background-color: #111;
   color: #fff;
-  padding: 18px;
-  font-size: 25px;
+  font:  "Lato", sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
   letter-spacing: 10px;
-  opacity: .8;
+  text-shadow: 3px 3px #000000
+}
+
+.caption span.border1 {
+  color: #fff;
+  font:  "Lato", sans-serif;
+  font-size: 30px;
+  font-weight: bolder;
+  letter-spacing: 10px;
+  text-shadow: 3px 3px #000000;
+}
+
+.caption span.border2 {
+  color: #fff;
+  font:  "Lato", sans-serif;
+  font-size: 30px;
+  font-weight: bolder;
+  letter-spacing: 10px;
+  text-shadow: 3px 3px #000000;
+}
+.caption span.border3 {
+  color: #fff;
+  font:  "Lato", sans-serif;
+  font-size: 30px;
+  font-weight: bolder;
+  letter-spacing: 10px;
+  text-shadow: 3px 3px #000000;
+}
+
+@media screen and (max-width: 650px) {
+  .caption span.border2{ display: none;}
+  .flexbox { padding: 0; }
+}
+
+@media screen and (max-width: 685px) {
+  .caption span.border3{ display: none;}
+  .flexbox { padding: 0; }
 }
 
 /* home page */
@@ -147,6 +183,7 @@ h2 {
     flex-flow: row wrap;
     display: -webkit-box;
     display: flex;
+    /*height: 300px;*/
 
   }
   .flex {
@@ -195,4 +232,61 @@ h2 {
   font:  "Lato", sans-serif;
 }
 
-/* fire proofing page */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
+
+/* portfolio page */
+
+/* contact page */
+
+.email {
+
+}
+
+
+/* media queries */
+
+@media (max-width: 1015px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	}
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+		margin-top: 7.5px;
+	}
+	.navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+  		display:block !important;
+	}
+}
