--- a/views/fireproofing.html
+++ b/views/fireproofing.html
@@ -1,7 +1,10 @@
 
 <div class="parallax">
   <div class="caption">
-    <span class="border">Experienced Fireproofing Contractor</span>
+    <span class="border3">Experienced Fireproofing Contractor</span>
+    <p><span class="border">Spray-On Solutions</span></p>
+		<p><span class="border1">(435)884-6708</span></p>
+		<p><span class="border2">Serving Utah, Idaho, Colorado and Wyoming</span></p>
   </div>
 </div>
 <div class="text">
