--- a/views/insulation.html
+++ b/views/insulation.html
@@ -1,12 +1,17 @@
 <div class="parallax">
   <div class="caption">
     <span class="border">Acoustical Insulation</span>
+    <p><span class="border">Spray-On Solutions</span></p>
+		<p><span class="border1">(435)884-6708</span></p>
+		<p><span class="border2">Serving Utah, Idaho, Colorado and Wyoming</span></p>
   </div>
 </div>
 <div class="text">
   <h2>Expert Acoustical Insulation Contractor Serving the Salt Lake City, Utah, Boise, Idaho, Colordo, and Wyoming Areas.</h2>
 
   <p>Here at Spray-on Solutions, we install fibrous and cementitious fireproofing, intumescent paint, and sprayed on acoustical insulation. When it comes to products, we only use the best of the best. Some of which include: <a href="http://isolatek.com/productinfo/TDS/CAFCO%20BLAZESHIELD%20ll_C-TDS_09-16.pdf">Blaze Shield II,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20BLAZE-SHIELD%20HP_C-TDS_09-16.pdf"> Blaze Shield HP, </a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20300_C-TDS_09-16.pdf">Cafco 300,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20400_C-TDS_09-16.pdf"> Cafco 400, </a> <a href="http://isolatek.com/productinfo/TDS/CAFCO%20FENDOLITE%20M-ll%20C-TDS_09-16.pdf">Fendolite MII, </a>Isolatek, Monokote, <a href="http://isolatek.com/productinfo/TDS/CAFCO-BOARD_C-TDS_10-16.pdf">Cafco board,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20Spray%20Film%20WB%203_C-TDS_09-16.pdf"> Spray film WB3,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20Spray%20Film%20WB%204_C-TDS_09-16.pdf"> WB4,</a><a href="http://isolatek.com/productinfo/TDS/CAFCO%20Spray%20Film%20WB%205_C-TDS_09-16.pdf"> WB5,</a> Monoglass, and K13. Our products meet all requirements established by national and local building codes and have proven to be highly effective.</p>
+</div>
+
 <div class="flexbox">
   <div class="flex"><a ui-sref="fireproofing">
     <figure><img src="photos/Utah performing arts/fireproofing/20161007_194346.jpg"/><p>Fire Proofing Services</p>
